(crawler) Remove custom thread factory
This was causing issues, and not really doing much of benefit.